feat(memory-game): implement memory game logic and UI
Add memory game functionality including card selection, pair matching, and feedback. Update game state to track memory-specific data like selected cards and matched pairs. Enhance OptionWidget to support memory game visuals with card backs and matched states. Add localization strings for memory game feedback.

The implementation includes:
- Memory game state management
- Visual feedback for card selection and matching
- Sound effects and haptics
- Localized feedback messages
- Proper cleanup of timers and state

--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -199,5 +199,7 @@
   "overallStatsTitle": "Performance globale",
   "categoryAccuracyChartTitle": "Précision par catégorie (Tout temps)",
   "noChartDataAvailable": "Pas assez de données pour afficher le graphique.",
-  "noStatsFound": "Aucune statistique trouvée pour les filtres sélectionnés."
+  "noStatsFound": "Aucune statistique trouvée pour les filtres sélectionnés.",
+  "matchFound": "Paire trouvée !",
+  "noMatchTryAgain": "Pas de paire. Réessayez !"
 }
