test(widget): add comprehensive tests for OptionWidget
This commit introduces a new test suite for the `OptionWidget` to ensure its core functionalities and visual states are working as expected.

Key areas covered by the tests:
- Display of text content when no image is provided.
- Display of image content when a picture path is provided.
- Correct rendering of the "card back" when `isRevealed` is false.
- Invocation of the `onTap` callback when the widget is tapped and not disabled.
- Prevention of `onTap` callback when the widget is disabled.
- Visual indication of selection state (`isSelected`).
- Visual indication of matched state (`isMatched`).
- Application of appropriate opacity for disabled or matched states.
- Usage of `gameThemeColor` for background when provided and not matched.
- Correctness of Semantics labels for accessibility, including states like selected and matched.

Additionally, this commit:
- Adds a new localization string "matched" for accessibility purposes in the `OptionWidget`.
- Updates the `OptionWidget` to use the new "matched" localization string.
- Regenerates mock services and localization files to reflect these changes.
- Adds a `semanticsKey` to `OptionWidget` for easier testing of Semantics properties.
- Adjusts elevation for matched cards.

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -201,5 +201,6 @@
   "noChartDataAvailable": "لا توجد بيانات كافية لعرض الرسم البياني.",
   "noStatsFound": "لم يتم العثور على إحصائيات للمرشحات المحددة.",
   "matchFound": "وجد تطابق!",
-  "noMatchTryAgain": "لا يوجد تطابق. حاول مرة أخرى!"
+  "noMatchTryAgain": "لا يوجد تطابق. حاول مرة أخرى!",
+  "matched": "متطابق"
 }
