--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -201,5 +201,6 @@
   "noChartDataAvailable": "Not enough data to display chart.",
   "noStatsFound": "No statistics found for the selected filters.",
   "matchFound": "Match Found!",
-  "noMatchTryAgain": "No Match. Try Again!"
+  "noMatchTryAgain": "No Match. Try Again!",
+  "matched": "Matched"
 }
