--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -201,5 +201,6 @@
   "noChartDataAvailable": "Pas assez de données pour afficher le graphique.",
   "noStatsFound": "Aucune statistique trouvée pour les filtres sélectionnés.",
   "matchFound": "Paire trouvée !",
-  "noMatchTryAgain": "Pas de paire. Réessayez !"
+  "noMatchTryAgain": "Pas de paire. Réessayez !",
+  "matched": "Apparié"
 }
